@@ -58,27 +58,6 @@
 <ulink url="&downloadable-file;images/floppy/access/drivers.img">.../current/images/floppy/access/drivers.img</ulink>
 </para></listitem>
 
-<!-- m68k driver images checked 2002-03-15 -->
-
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/images-1.44/driver.bin">.../current/amiga/images-1.44/driver.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/images-1.44/driver.bin">.../current/atari/images-1.44/driver.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/images-1.44/driver.bin">.../current/bvme6000/images-1.44/driver.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/images-1.44/driver.bin">.../current/mac/images-1.44/driver.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme147/images-1.44/driver.bin">.../current/mvme147/images-1.44/driver.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/images-1.44/driver.bin">.../current/mvme16x/images-1.44/driver.bin</ulink>
-</para></listitem>
-
 <!-- mips driver images checked 2002-03-15 -->
 
 <listitem arch="mips"><para>
