@@ -52,30 +52,6 @@
 <ulink url="&downloadable-file;images-1.44/rescue.bin">.../current/images-1.44/rescue.bin</ulink>
 </para></listitem>
 
-<!-- m68k rescue images checked 2002-03-15 -->
-
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/images-1.44/rescue.bin">.../current/amiga/images-1.44/rescue.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/images-1.44/rescue.bin">.../current/atari/images-1.44/rescue.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/images-1.44/rescue.bin">.../current/bvme6000/images-1.44/rescue.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/images-2.88/rescue.bin">.../current/bvme6000/images-2.88/rescue.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/images-1.44/rescue.bin">.../current/mac/images-1.44/rescue.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme147/images-1.44/rescue.bin">.../current/mvme147/images-1.44/rescue.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/images-1.44/rescue.bin">.../current/mvme16x/images-1.44/rescue.bin</ulink>
-</para></listitem>
-
 <!-- mips rescue images checked 2002-03-15 -->
 
 <listitem arch="mips"><para>
