@@ -19,27 +19,6 @@
 <ulink url="&downloadable-file;lart/root.tar.gz">.../current/lart/root.tar.gz</ulink>
 </para></listitem>
 
-<!-- m68k root fs archive 3.0.19-2002-02-09 -->
-
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/root.bin">.../current/amiga/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/root.bin">.../current/atari/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/rootbvme6000.bin">.../current/bvme6000/rootbvme6000.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/root.bin">.../current/mac/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme147/rootmvme147.bin">.../current/mvme147/rootmvme147.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/rootmvme16x.bin">.../current/mvme16x/rootmvme16x.bin</ulink>
-</para></listitem>
-
 <!-- mips root fs archive 3.0.20-2002-03-14 -->
 
 <listitem arch="mips"><para>
@@ -99,27 +78,6 @@ url="&downloadable-file;images/floppy/access/root.bin">.../current/images/floppy
 
 <listitem arch="ia64"><para>
 <ulink url="&downloadable-file;root.bin">.../current/root.bin</ulink>
-</para></listitem>
-
-<!-- m68k root checked 2002-03-15 -->
-
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;amiga/images-1.44/root.bin">.../current/amiga/images-1.44/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;atari/images-1.44/root.bin">.../current/atari/images-1.44/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;bvme6000/images-1.44/root.bin">.../current/bvme6000/images-1.44/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mac/images-1.44/root.bin">.../current/mac/images-1.44/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme147/images-1.44/root.bin">.../current/mvme147/images-1.44/root.bin</ulink>
-</para></listitem>
-<listitem arch="m68k"><para>
-<ulink url="&downloadable-file;mvme16x/images-1.44/root.bin">.../current/mvme16x/images-1.44/root.bin</ulink>
 </para></listitem>
 
 <!-- mips root checked 2002-03-15 -->
