@@ -24,7 +24,7 @@ delay. Next, a black screen with white text should come up, displaying
 all kinds of kernel debugging information.  These messages may scroll
 by too fast for you to read, but that's OK.  After a couple of
 seconds, the installation program should start automatically, so you
-can continue down at <xref linkend="init-config"/>.
+can continue down at <xref linkend="d-i-intro"/>.
 
 </para>
   </sect2>
@@ -47,7 +47,7 @@ seconds' delay.  Next, a black screen with white text should come up,
 displaying all kinds of kernel debugging information. These messages
 may scroll by too fast for you to read, but that's OK. After a couple
 of seconds, the installation program should start automatically, so
-you can continue below at <xref linkend="init-config"/>.
+you can continue below at <xref linkend="d-i-intro"/>.
 
 </para>
   </sect2>
@@ -63,8 +63,8 @@ the <filename>debian</filename> directory. The
 <guimenuitem>Settings</guimenuitem> item in the
 <guimenu>File</guimenu> menu, click the
 <guilabel>Kernel</guilabel> tab.  Select the kernel
-(<filename>linux.bin</filename>) and ramdisk
-(<filename>root.bin</filename>) images in the
+(<filename>vmlinuz</filename>) and ramdisk
+(<filename>initrd.gz</filename>) images in the
 <filename>debian</filename> directory by clicking on the corresponding
 buttons in the upper right corner, and navigating the file select
 dialogs to locate the files. Close the <guilabel>Settings</guilabel>
@@ -81,7 +81,7 @@ should come up, displaying all kinds of kernel debugging
 information. These messages may scroll by too fast for you to read,
 but that's OK. After a couple of seconds, the installation program
 should start automatically, so you can continue below at 
-<xref linkend="init-config"/>.
+<xref linkend="d-i-intro"/>.
 
 </para>
   </sect2>
