@@ -32,6 +32,10 @@ If you already have an operating system on your system
 (VM, z/OS, OS/390, &hellip;)
 </phrase>
 
+<phrase arch="m68k">
+(Amiga OS, Atari TOS, Mac OS, &hellip;)
+</phrase>
+
 and want to stick Linux on the same disk, you will need to repartition
 the disk. Debian requires its own hard disk partitions. It cannot be
 installed on Windows or MacOS partitions. It may be able to share some
